Praktikum2/parse2.jj
options{}
PARSER_BEGIN(ExprsParse)
    public class ExprsParse {
        public static void main(String args []) {
            ExprsParse parser = new ExprsParse(System.in);
           try {
                parser.start();            
                System.out.println("Ausdruck ok");
            } catch (ParseException e) {
                System.err.println(e);
            }
        }
    }
PARSER_END(ExprsParse)

SKIP :{" "}
SKIP :{"\n"|"\r"|"\r\n"}
TOKEN :{<NUMBER : ["1"-"9"](["0"-"9"])*|"0">}
void start():
{
    String a;
}
{
    a=expr()<EOF> { System.out.println(a);}
}
String summe():
{
    String a;
}
{
    a=produkt() (("+"|"-") produkt())* {return a;}
}
String produkt():
{String a;}
{
    a=term() (("*"|"/") term())*   {return a;}
}
String term():
{
    Token t = null;
    String a;
}
{
    a=<NUMBER>  {return t.toString();}
    | a="(" expr() ")" {return a;}
}
String expr():
{
    String a;
}
{
    a=summe() {return a;}
}
